Update design and lay-out

--- a/book/design/concrete/composite_floors.ipynb
+++ b/book/design/concrete/composite_floors.ipynb
@@ -27,9 +27,13 @@
     "```\n",
     "\n",
     "```{figure} Images/CompositeFloors1.jpg\n",
+    "---\n",
+    "Composite floor cross-section.\n",
     "```    \n",
     "\n",
     "```{figure} Images/CompositeFloors2.jpg\n",
+    "---\n",
+    "Example of composite floor\n",
     "```    \n",
     "\n",
     "## Applications\n",
@@ -60,25 +64,29 @@
     "## Product specifications HODY SB60 floor\n",
     "\n",
     "```{figure} Images/CompositeFloors1.jpg\n",
+    "---\n",
+    "HODY SB60 composite floor cross-section.\n",
     "```    \n",
     "\n",
     "```{figure} Images/CompositeFloors2.jpg\n",
+    "---\n",
+    "HODY SB60 composite floor example.\n",
     "```  \n",
     "\n",
     "| Plate Reinforcement       |                                                               |\n",
     "|---------------------------|---------------------------------------------------------------|\n",
-    "| Plate thickness  (including zinc)             | 0.75 mm / 0.88 mm / 1.00 mm                                  |\n",
+    "| Plate thickness  (including zinc)             | 0.75 $[mm]$ / 0.88 $[mm]$ / 1.00 $[mm]$                                  |\n",
     "| Nets                      | FeB 500 HKN                               |\n",
     "| Additional bars           | FeB 500 HKN / HWL                                             |\n",
-    "| Profile height            | 60 mm                                                         |\n",
-    "| Concrete Total width      | 1086 mm                                                       |\n",
-    "| Effective width           | 1010 mm                                                       |\n",
+    "| Profile height            | 60 $[mm]$                                                         |\n",
+    "| Concrete Total width      | 1086 $[mm]$                                                       |\n",
+    "| Effective width           | 1010 $[mm]$                                                       |\n",
     "| Length                    | Any length possible                                           |\n",
     "\n",
-    "| Material properties       |                                                               |\n",
-    "|---------------------------|---------------------------------------------------------------|\n",
-    "| Characteristic yield stress | Minimal 320 N/mm²                                           |\n",
-    "| Ultimate strain           | Minimal 17%                                                   |\n",
+    "| Material properties         |                                                               |\n",
+    "|---------------------------  |---------------------------------------------------------------|\n",
+    "| Characteristic yield stress | Minimal 320 $[N/mm^2]$                                           |\n",
+    "| Ultimate strain             | Minimal 17%                                                   |\n",
     "\n",
     "Based on: C28/35. Other strength classes can be applied except for lightweight concrete.\n",
     "\n",
@@ -86,7 +94,7 @@
     "\n",
     "### Offices and lodging\n",
     "\n",
-    "| Span (mm) | Number of Props | Thickness (mm) | Type of Top Reinforcement (for Continuous Floors)          |\n",
+    "| Span $[mm]$ | Number of Props | Thickness $[mm]$ | Type of Top Reinforcement (for Continuous Floors)          |\n",
     "|-----------|------------------|----------------|-----------------------------------------------------------|\n",
     "| 1.500     | 0                | 110            | Reinforcement Net: 7-150                                  |\n",
     "| 2.000     | 0                | 110            | Reinforcement Net: 7-150                                  |\n",
@@ -115,7 +123,7 @@
     "\n",
     "### Residential\n",
     "\n",
-    "| Span [mm] | Number of Props | Thickness [mm] | Type of Top Reinforcement (for Continuous Floors) |\n",
+    "| Span $[mm]$ | Number of Props | Thickness $[mm]$ | Type of Top Reinforcement (for Continuous Floors) |\n",
     "|-----------|------------------|----------------|----------------------------------------------------|\n",
     "| 1.500     | 0                | 110            | Reinforcement Net: 7-150                          |\n",
     "| 2.000     | 0                | 110            | Reinforcement Net: 7-150                          |\n",
