--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -24,8 +24,13 @@
     "- Deflection under variable load of max. 0,003 L\n",
     "\n",
     "```{figure} Images/HollowCore1.jpg\n",
+    "---\n",
+    "Hollow core cross-section.\n",
     "```  \n",
+    "\n",
     "```{figure} Images/HollowCore2.jpg\n",
+    "---\n",
+    "Hollow core example.\n",
     "```  \n",
     "\n",
     "```{note}\n",
