--- a/book/design_workflow/general_drawing/cross_section_indications.ipynb
+++ b/book/design_workflow/general_drawing/cross_section_indications.ipynb
@@ -20,21 +20,21 @@
     "| No. | Description                           | Hatch                                           | Scale        |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------               | -----                                           | -----        | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                                       |                                                 | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
-    "| 1   | Brick masonry                         |```{figure} Images/Brick 1.png```                |:black_circle:|:black_circle:|              |              |              |              |              |\n",
-    "|     |                                       |```{figure} Images/Brick 2.png```                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
-    "|     |                                       |```{figure} Images/Brick 3.png```                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
-    "| 2   | Stone-like materials                  |```{figure} Images/Stone-like.png```             |:white_circle:|       |      |        |       |       |e.g. fireproof material, roof tiles |\n",
-    "| 3   | Non-brick masonry                     |```{figure} Images/Non-brick.png```              |              |       |      |        |       |       |e.g. concrete masonry units    |\n",
-    "| 4   | Non load carrying division walls      |```{figure} Images/Non-load.png```               |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |```{figure} Images/Non-load 2.png```             |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |```{figure} Images/Non-load 3.png```             |              |       |      |        |       |       |                          |\n",
-    "| 5   | Reinforced concrete (cast in situ)    |```{figure} Images/Reinforced concrete.png```    |              |       |      |        |       |       |                          |\n",
-    "|     |                                       |```{figure} Images/Reinforced concrete 2.png```  |              |       |      |        |       |       |                          |\n",
-    "| 6   | Reinforced concrete (precast)         |```{figure} Images/Reinforced concrete precast.png```|   |       |      |        |       |       |                          |\n",
-    "| 7   | Plain concrete                        |```{figure} Images/Plain concrete.png```         |       |       |      |        |       |       |e.g. lightweight concrete |\n",
-    "| 8   | Decorative concrete                   |```{figure} Images/Decorative concrete.png```    |       |       |      |        |       |       |                          |\n",
-    "| 9   | Natural stone                         |```{figure} Images/Natural stone.png```          |       |       |      |        |       |       |                          |\n",
-    "| 10  | Single floor/wall finishing           |```{figure} Images/Single floor wall.png```      |       |       |      |        |       |       | e.g. plaster     |\n",
+    "| 1   | Brick masonry                         |```{figure} Images/Brick1.png```                |:black_circle:|:black_circle:|              |              |              |              |              |\n",
+    "|     |                                       |```{figure} Images/Brick2.png```                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
+    "|     |                                       |```{figure} Images/Brick3.png```                |              |:black_circle:|:black_circle:|:black_circle:|:black_circle:|:black_circle:|              |\n",
+    "| 2   | Stone-like materials                  |```{figure} Images/Stone_Like.png```             |:white_circle:|       |      |        |       |       |e.g. fireproof material, roof tiles |\n",
+    "| 3   | Non-brick masonry                     |```{figure} Images/Non_Brick.png```              |              |       |      |        |       |       |e.g. concrete masonry units    |\n",
+    "| 4   | Non load carrying division walls      |```{figure} Images/Non_Load1.png```               |              |       |      |        |       |       |                          |\n",
+    "|     |                                       |```{figure} Images/Non_Load2.png```             |              |       |      |        |       |       |                          |\n",
+    "|     |                                       |```{figure} Images/Non_Load3.png```             |              |       |      |        |       |       |                          |\n",
+    "| 5   | Reinforced concrete (cast in situ)    |```{figure} Images/Reinforced_Concrete1.png```    |              |       |      |        |       |       |                          |\n",
+    "|     |                                       |```{figure} Images/Reinforced_Concrete2.png```  |              |       |      |        |       |       |                          |\n",
+    "| 6   | Reinforced concrete (precast)         |```{figure} Images/Reinforced_Concrete_Precast.png```|   |       |      |        |       |       |                          |\n",
+    "| 7   | Plain concrete                        |```{figure} Images/Plain_Concrete.png```         |       |       |      |        |       |       |e.g. lightweight concrete |\n",
+    "| 8   | Decorative concrete                   |```{figure} Images/Decorative_Concrete.png```    |       |       |      |        |       |       |                          |\n",
+    "| 9   | Natural stone                         |```{figure} Images/Natural_Stone.png```          |       |       |      |        |       |       |                          |\n",
+    "| 10  | Single floor/wall finishing           |```{figure} Images/Single_Floor_Wall.png```      |       |       |      |        |       |       | e.g. plaster     |\n",
     "| 11  | Composite floor/wall finishing        |```{figure} Images/Composite.png```              |       |       |      |        |       |       |                          |\n"
    ]
   },
@@ -54,10 +54,10 @@
     "|   |                                    |                                      | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
     "|12 | Softwood                           |```{figure} Images/Softwood.png```     |       |       |      |        |       |       |                          |\n",
     "|13 | Hardwood                           |```{figure} Images/Hardwood.png```      |       |       |      |        |       |       |                          |\n",
-    "|14 | Softwood/Hardwood (along the grain)|```{figure} Images/Soft-Hardwood along the grain.png```       |       |       |      |        |       |       |                          |\n",
-    "|15 | Glued seam                         |```{figure} Images/Glued seam.png```    |       |       |      |        |       |       |                          |\n",
-    "|16 | Cladding panel                     |```{figure} Images/Cladding panel.png```     |       |       |      |        |       |       |                          |\n",
-    "|17 | Isolation panel                    |```{figure} Images/Isolation panel.png```    |       |       |      |        |       |       |                          |"
+    "|14 | Softwood/Hardwood (along the grain)|```{figure} Images/Soft_Hardwood_Along_The_Grain.png```       |       |       |      |        |       |       |                          |\n",
+    "|15 | Glued seam                         |```{figure} Images/Glued_Seam.png```    |       |       |      |        |       |       |                          |\n",
+    "|16 | Cladding panel                     |```{figure} Images/Cladding_Panel.png```     |       |       |      |        |       |       |                          |\n",
+    "|17 | Isolation panel                    |```{figure} Images/Isolation_Panel.png```    |       |       |      |        |       |       |                          |"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "| 22  | Synthetics     |```{figure} Images/Synthetics.png```   |       |       |      |        |       |       |                          |\n",
     "| 23  | Sealant        |```{figure} Images/Sealant.png```      |       |       |      |        |       |       |                          |\n",
     "| 24  | Foil, bitumen  |```{figure} Images/Foil.png```         |       |       |      |        |       |       |                          |\n",
-    "| 25  | Ground level   |```{figure} Images/Gorund level.png``` |       |       |      |        |       |       |                          |\n",
+    "| 25  | Ground level   |```{figure} Images/Gorund_Level.png``` |       |       |      |        |       |       |                          |\n",
     "| 26  | Sand           |```{figure} Images/Sand.png```         |       |       |      |        |       |       |                          |\n",
     "| 27  | Gravel         |```{figure} Images/Gravel.png```       |       |       |      |        |       |       |                          |\n",
     "| 28  | Water          |```{figure} Images/Water.png```        |       |       |      |        |       |       |                          |\n",
