--- a/book/design_workflow/general_loads/deflection_requirements.ipynb
+++ b/book/design_workflow/general_loads/deflection_requirements.ipynb
@@ -57,13 +57,13 @@
     "To prevent this, the roof must be designed stiff enough to ensure the remaining slope of\n",
     "the roof at the lowest support stays positive. It is therefore recommended to design for a minimum slope of 1,6%.\n",
     "\n",
-    "```{figure} Images/Water accumulation.jpg\n",
+    "```{figure} Images/Water_Accumulation1.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
     "```\n",
     "\n",
-    "```{figure} Images/Water accumulation 2.jpg\n",
+    "```{figure} Images/Water_Accumulation2.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -92,7 +92,7 @@
     "$u <= 1/150*h$ for industrial buildings  \n",
     "$u <= 1/300*h$ for other buildings\n",
     "\n",
-    "```{figure} Images/Low rise deformation.jpg\n",
+    "```{figure} Images/Low_Rise_Deformation.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -103,7 +103,7 @@
     "$u <= 1/300*h$ for storey height  \n",
     "$u <= 1/500*h$ for total height\n",
     "\n",
-    "```{figure} Images/High rise deformation.jpg\n",
+    "```{figure} Images/High_Rise_Deformation.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
