--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -55,7 +55,7 @@
     "For other values linear interpolation is allowed. In this section only the force\n",
     "coefficients belonging to large surfaces are given (>10m2). For smaller surfaces see NEN-EN-1991-1-4.\n",
     "\n",
-    "```{figure} Images/Positive external pressure.png\n",
+    "```{figure} Images/Positive_External_Pressure.png\n",
     "---\n",
     "scale: 100%\n",
     "align: right\n",
@@ -63,7 +63,7 @@
     "Positive external pressure\n",
     "```\n",
     "\n",
-    "```{figure} Images/Positive internal pressure.png\n",
+    "```{figure} Images/Positive_Internal_Pressure.png\n",
     "---\n",
     "scale: 100%\n",
     "align: right\n",
@@ -129,14 +129,14 @@
     "| h/d = 1 |   -1.2  |   -0.8   |   -0.5   |   +0.8   |   -0.5   |\n",
     "| h/d ≤ 0.25 | -1.2  |   -0.8   |   -0.5   |   +0.7   |   -0.3   |\n",
     "\n",
-    "```{figure} Images/Windzones 1.png\n",
+    "```{figure} Images/Windzones1.png\n",
     "---\n",
     "scale: 100%\n",
     "align: right\n",
     "---\n",
     "```\n",
     "\n",
-    "```{figure} Images/Windzones 2.png\n",
+    "```{figure} Images/Windzones2.png\n",
     "---\n",
     "scale: 100%\n",
     "align: right\n",
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} Images/Windzones roofs 1.png\n",
+    "```{figure} Images/Windzones_Roofs1.png\n",
     "---\n",
     "scale: 100%\n",
     "align: right\n",
@@ -178,13 +178,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} Images/Windzones roofs 2.png\n",
+    "```{figure} Images/Windzones_Roofs2.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
     "```\n",
     "  \n",
-    "```{figure} Images/Windzones roofs 3.png\n",
+    "```{figure} Images/Windzones_Roofs3.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -194,16 +194,12 @@
     "|----------------|---------|---------|---------|---------|---------|\n",
     "|       5º       |  -1.7   |  -1.2   |  -0.6   |  -0.6   |  +0.2   |\n",
     "|                |  +0.0   |  +0.0   |  +0.0   |  -0.6   |  -0.6   |\n",
-    "|----------------|---------|---------|---------|---------|---------|\n",
     "|      15º       |  -0.9   |  -0.8   |  -0.3   |  -0.4   |  -1.0   |\n",
     "|                |  +0.2   |  +0.2   |  +0.2   |  +0.0   |  +0.0   |\n",
-    "|----------------|---------|---------|---------|---------|---------|\n",
     "|      30º       |  -0.5   |  -0.5   |  -0.2   |  -0.4   |  -0.5   |\n",
     "|                |  +0.7   |  +0.7   |  +0.4   |  +0.0   |  +0.0   |\n",
-    "|----------------|---------|---------|---------|---------|---------|\n",
     "|      45º       |   0.0   |   0.0   |   0.0   |  -0.2   |  -0.3   |\n",
     "|                |  +0.7   |  +0.7   |  +0.6   |  +0.0   |  +0.0   |\n",
-    "|----------------|---------|---------|---------|---------|---------|\n",
     "|      60º       |  +0.7   |  +0.7   |  +0.7   |  -0.2   |  -0.3   |\n",
     "|      75º       |  +0.8   |  +0.8   |  +0.8   |  -0.2   |  -0.3   |\n"
    ]
@@ -215,15 +211,10 @@
     "| Roof Angle (α) |    F    |    G    |    H    |    I    |\n",
     "|----------------|---------|---------|---------|---------|\n",
     "|       5º       |  -1.6   |  -2.2   |  -0.7   |  -0.6   |\n",
-    "|----------------|---------|---------|---------|---------|\n",
     "|      15º       |  -1.3   |  -2.0   |  -0.6   |  -0.5   |\n",
-    "|----------------|---------|---------|---------|---------|\n",
     "|      30º       |  -1.1   |  -1.5   |  -0.8   |  -0.5   |\n",
-    "|----------------|---------|---------|---------|---------|\n",
     "|      45º       |  -1.1   |  -1.5   |  -0.9   |  -0.5   |\n",
-    "|----------------|---------|---------|---------|---------|\n",
     "|      60º       |  -1.1   |  -1.5   |  -0.8   |  -0.5   |\n",
-    "|----------------|---------|---------|---------|---------|\n",
     "|      75º       |  -1.1   |  -1.5   |  -0.8   |  -0.5   |"
    ]
   },
@@ -244,7 +235,7 @@
     "formula as other windloads. The location where this force acts depends\n",
     "on geometry and the sign of the overall force coefficient ($c_f$).\n",
     "\n",
-    "```{figure} Images/Wind zones canopies.png\n",
+    "```{figure} Images/Wind_Zones_Canopies1.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -255,7 +246,7 @@
     "these local loads must be taken into account. To calculate the local\n",
     "wind actions the canopy is divided in different windzones as shown below.\n",
     "\n",
-    "```{figure} Images/Wind zones canopies 2.png\n",
+    "```{figure} Images/Wind_Zones_Canopies2.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -266,7 +257,7 @@
     "feasible, actual obstructions under the canopy divided by the cross\n",
     "sectional area under the canopy.\n",
     "\n",
-    "```{figure} Images/Wind zones canopies 3.png\n",
+    "```{figure} Images/Wind_Zones_Canopies3.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -348,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} Images/Windzones NL.png\n",
+    "```{figure} Images/Windzones_NL.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
