--- a/book/design_workflow/general_loads/variable_loads_3_rain_snow.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_3_rain_snow.ipynb
@@ -19,14 +19,14 @@
     "and preventing the water from rising above this amount by designing for\n",
     "emergency overflow. Furthermore, always design a roof with a small pitch (general loads, general)\n",
     "\n",
-    "```{figure} Images/Emergency overflow.jpg\n",
+    "```{figure} Images/Emergency_Overflow1.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
     "Emergency overflow by means of a so called \"mailbox\"\n",
     "```\n",
     "\n",
-    "```{figure} Images/Emergency overflow 2.jpg\n",
+    "```{figure} Images/Emergency_Overflow2.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -59,7 +59,7 @@
     "  \n",
     "The shape coefficient can be determined with the shown diagram. Note that μ2 is only applicable where snow accumulation can occur. For complex roof shapes and more information, see NEN-EN 1991-1-3.\n",
     "\n",
-    "```{figure} Images/Snow loading.jpg\n",
+    "```{figure} Images/Snow_Loading.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
