--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Beams on multiple supports (concentrated loads)\n",
-    "```{figure} Images/Beams on multiple supports.png\n",
+    "```{figure} Images/Beams_On_Multiple_Supports1.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} Images/Beams on multiple supports 1.png\n",
+    "```{figure} Images/Beams_On_Multiple_Supports2.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
