--- a/book/design/concrete/bubbledeck_floors.ipynb
+++ b/book/design/concrete/bubbledeck_floors.ipynb
@@ -37,23 +37,23 @@
    "source": [
     "## Execution aspects\n",
     "\n",
-    "Adjusting temporary support: support reinforcement cages according to\n",
+    "1. Adjusting temporary support: support reinforcement cages according to\n",
     "fabricator specifications; supports must be perpendicular to the trusses\n",
     "at a maximum c.t.c. distance of 1,8 m.  \n",
     "\n",
-    "Placing of the elements: reinforcement cages are lifted at the trusses and\n",
+    "2. Placing of the elements: reinforcement cages are lifted at the trusses and\n",
     "placed alongside each other; across a joint of 80 mm is left open. Near\n",
     "columns about 50 mm, depending on the detailing. \n",
     "\n",
-    "The extra reinforcement is now placed: coupler bars, coupler nets,\n",
+    "3. The extra reinforcement is now placed: coupler bars, coupler nets,\n",
     "hairpints and reinforcement to prevent punching, all according to the\n",
     "engineer’s specifications. \n",
     "\n",
-    "The edge formwork is placed: depending on the detailing.  \n",
+    "4. The edge formwork is placed: depending on the detailing.  \n",
     "\n",
-    "The concrete is poured in C30/37; other properties of the concrete are decided in consultation with the concrete producer. \n",
+    "5. The concrete is poured in C30/37; other properties of the concrete are decided in consultation with the concrete producer. \n",
     "\n",
-    "Temporary supports are removed."
+    "6. Temporary supports are removed."
    ]
   },
   {
@@ -65,7 +65,7 @@
     "With a bubbledeckfloor flat plate, floors without beams can be constructed. The self weight, dead load and variable load is transmitted in two directions to the supporting walls\n",
     "and/or columns. The reinforcement modules are available in FeB 500. The polymer spheres are made of HDPE (high density polyethylene).\n",
     "\n",
-    "| Type | Floor Thickness [mm] | Sphere Diameter [mm] | C.T.C. Distance [mm] |\n",
+    "| Type | Floor Thickness $[mm]$ | Sphere Diameter $[mm]$ | C.T.C. Distance $[mm]$ |\n",
     "|------|-----------------------|-----------------------|-----------------------|\n",
     "| BD   | 230                   | ∅180                  | 200                   |\n",
     "| BD   | 280                   | ∅225                  | 250                   |\n",
@@ -99,7 +99,7 @@
    "source": [
     "## Spans\n",
     "\n",
-    "| Type | Floor Thickness [mm] | Sphere Diameter [mm] | C.T.C. Distance [mm] | Mass (full sphere pattern) [kg/m2] element Width 3.000 [mm] | Mass (full sphere pattern) [kg/m2] element Width 2.400 [mm] | Span [m] |\n",
+    "| Type | Floor Thickness $[mm]$ | Sphere Diameter $[mm]$ | C.T.C. Distance $[mm]$ | Mass (full sphere pattern) $[kg/m2]$ element Width 3.000 $[mm]$ | Mass (full sphere pattern) $[kg/m2]$ element Width 2.400 $[mm]$ | Span $[m]$ |\n",
     "|------|-----------------------|-----------------------|-----------------------|---------------------------------------------------------------|---------------------------------------------------------------|---------|\n",
     "| BD   | 230                   | ∅180                  | 200                   | 380                                                           | 390                                                           | 6 - 7   |\n",
     "| BD   | 280                   | ∅225                  | 250                   | 450                                                           | 490                                                           | 7 - 8   |\n",
@@ -121,19 +121,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross section of a bubble deck floor\n",
-    "\n",
     "```{figure} Images/DetailBubbledeck1.jpg\n",
+    "---\n",
+    "Cross section of a bubble deck floor\n",
     "```    \n",
-    "\n",
-    "### Support of bubbledeck floor on concrete wall\n",
     "\n",
     "```{figure} Images/DetailBubbledeck2.jpg\n",
+    "---\n",
+    "Support of bubbledeck floor on concrete wall\n",
     "```    \n",
     "\n",
-    "### Support of bubble deck floor with cavity wall for residential construction\n",
-    "\n",
     "```{figure} Images/DetailBubbledeck3.jpg\n",
+    "---\n",
+    "Support of bubble deck floor with cavity wall for residential construction\n",
     "```    "
    ]
   }
