--- a/book/design/concrete/reinforcement_tables.ipynb
+++ b/book/design/concrete/reinforcement_tables.ipynb
@@ -12,13 +12,14 @@
    "metadata": {},
    "source": [
     "## Bending and normal force\n",
-    "```{figure} Images/Brick 1.png\n",
+    "```{figure} Images/Brick1.png\n",
     "```    \n",
     "\n",
     "## Reinforcement table for bending moments\n",
     "```{figure} Images/Reinforcement_Table1.jpg\n",
     "```\n",
     "\n",
+    "```{note}\n",
     "- Strength Class: Represents the range from C20/25 to C45/55.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
     "- Quantity: The quantity specified, which in this case is 500.  \n",
@@ -26,10 +27,12 @@
     "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
+    "```\n",
     "\n",
     "```{figure} Images/Reinforcement_Table2.jpg\n",
     "```    \n",
     "\n",
+    "```{note}\n",
     "- Strength Class: Represents C55/67.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
     "- Quantity: The quantity specified, which in this case is 500.  \n",
@@ -37,10 +40,12 @@
     "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
+    "```\n",
     "\n",
     "```{figure} Images/Reinforcement_Table3.jpg\n",
-    "```    \n",
+    "```\n",
     "\n",
+    "```\n",
     "- Strength Class: Represents C20/25 till C45/55.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
     "- Quantity: The quantity specified, which in this case is 500.  \n",
@@ -48,10 +53,12 @@
     "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
+    "```\n",
     "\n",
     "```{figure} Images/Reinforcement_Table4.jpg\n",
     "```    \n",
     "\n",
+    "```{note}\n",
     "- Strength Class: Represents C20/25 till C45/55.  \n",
     "- Reinforcement Steel: Indicates the reinforcement steel type.  \n",
     "- Quantity: The quantity specified, which in this case is 500.  \n",
@@ -59,6 +66,7 @@
     "- a/h: This seems to represent a certain characteristic of the reinforcement steel, presumably 'a' and 'h' values.  \n",
     "\n",
     "a = distance from center of reinforcement to edge of concrete.\n",
+    "```\n",
     "\n",
     "```{figure} Images/Reinforcement_BendingMomentjpg\n",
     "```    \n",
