--- a/book/design_workflow/general_drawing/technical_drawings.ipynb
+++ b/book/design_workflow/general_drawing/technical_drawings.ipynb
@@ -16,54 +16,60 @@
     "Paper size can vary from A4 to A0. Most of the time A3 is chosen. Draw a\n",
     "frame which does not touch the edges of the paper.\n",
     "\n",
-    "```{figure} Images/General drawing 1.png\n",
+    "```{figure} Images/General_Drawing1.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Header\n",
     "The header contains information on the drawing, drawer, scale and units.\n",
     "\n",
-    "```{figure} Images/General drawing 2.png\n",
+    "```{figure} Images/General_Drawing2.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Layout\n",
     "A technical drawing contains a minimum of three elevations or corsssections. The elevation containing most information is placed a the top left position. The other elevations are now determined with third angle projection (Dutch: Amerikaanse projectie). If\n",
     "additional elevations, sections or detail drawings need to be added, they are placed at the bottom right corner of the paper.\n",
     "\n",
-    "```{figure} Images/General drawing 3.png\n",
+    "```{figure} Images/General_Drawing3.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Scale\n",
     "Only scales 1:1, 1:2 and 1:5 or multiples of 10 of these are allowed. Always try to draw the object as large as possible on the chosen paper.\n",
     "Remember however that also some space will be used for dimensions and text. If one or more elevations (details!) have a different scale, mention this in\n",
     "the title below this particular elevation. \n",
     "\n",
-    "```{figure} Images/General drawing 4.png\n",
+    "```{figure} Images/General_Drawing4.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Contours\n",
     "With a pencil grid lines, centre lines and datum lines can be drawn. After this, draw the contours of the object. If necessary, some changes to the layout\n",
     "or scale of the drawing can be made.\n",
     "\n",
-    "```{figure} Images/General drawing 5.png\n",
+    "```{figure} Images/General_Drawing5.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Objects\n",
     "The object is drawn in detail.\n",
     "\n",
-    "```{figure} Images/General drawing 6.png\n",
+    "```{figure} Images/General_Drawing6.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Dimensions\n",
     "How? Dimensions are indicated by a dimension line and two auxilairy lines indicating the length to be dimensioned. The intersection\n",
@@ -75,43 +81,48 @@
     "the elevation which shows the important component the clearest. Deviations of this ‘general rule’ are only allowed if this clarifies the\n",
     "drawing. If multiple dimensions are shown on one line, a summation must always be added, with an extra dimension line.\n",
     "\n",
-    "```{figure} Images/General drawing 7.jpg\n",
+    "```{figure} Images/General_Drawing7.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
-    "```{figure} Images/General drawing 8.png\n",
+    "```{figure} Images/General_Drawing8.png\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Hatching\n",
     "To indicate used materials cross sections are hatched. See gd|b for different types of hatches. Note that the hatch to be used depends\n",
     "on the scale of the drawing. If two components meet which must be hatched in the same way, the hatch is rotated 90°. This is only applicable to\n",
     "hatches consisting of diagonal lines.\n",
     "\n",
-    "```{figure} Images/General drawing 9.jpg\n",
+    "```{figure} Images/General_Drawing9.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Lines\n",
     "Now the different lines in the drawing need to be given the correct thickness and type. For an overview of the different types and thicknesses and\n",
     "their applications, see the lecture notes on Technical Drawing.\n",
     "\n",
-    "```{figure} Images/General drawing 10.jpg\n",
+    "```{figure} Images/General_Drawing10.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
+    "```\n",
     "\n",
     "## Text\n",
     "Finally, if necessary with the aid of leaders, texts are added. Elevation titles need to be placed below the object, aligned to the left. If this\n",
     "particular elevation differs in scale of the rest of the drawing mention this in the elevation title. Do not use abbreviations in titles.\n",
     "\n",
-    "```{figure} Images/General drawing 11.jpg\n",
+    "```{figure} Images/General_Drawing11.jpg\n",
     "---\n",
     "scale: 100%\n",
-    "---"
+    "---\n",
+    "```"
    ]
   },
   {
