--- a/book/design_workflow/general_mechanics/cross_sectional_quantities.ipynb
+++ b/book/design_workflow/general_mechanics/cross_sectional_quantities.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Section parameters\n",
     "\n",
-    "```{figure} Images/Rectangle shape.jpg\n",
+    "```{figure} Images/Rectangle_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -38,7 +38,7 @@
     "|$\\bar{y}_C=\\frac{1}{2}b$         |$I_{zz}=\\frac{1}{12}bh^3$        |$I_{\\overline{zz}}=\\frac{1}{3}bh^3$  |\n",
     "|$\\bar{z}_C=\\frac{1}{2}b$         |$I_{yz}=\\frac{1}{12}bh^3$        |$I_{\\overline{yz}}=\\frac{1}{4}b^2h^2$|\n",
     "\n",
-    "```{figure} Images/Parallelogram shape.jpg\n",
+    "```{figure} Images/Parallelogram_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -51,7 +51,7 @@
     "|$\\bar{y}_C=\\frac{1}{2}(a+b)$ |$I_{zz}=\\frac{1}{12}bh^3$      |                               |\n",
     "|$\\bar{z_C}=\\frac{1}{2}h$     |$I_{yz}=\\frac{1}{12}abh^2$   |                               |\n",
     "\n",
-    "```{figure} Images/Triangle shape.jpg\n",
+    "```{figure} Images/Triangle_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -64,7 +64,7 @@
     "|$\\bar{y}_C=\\frac{1}{3}(2a-b)$ |$I_{zz}=\\frac{1}{36}bh^3$         |$I_{\\overline{yz}}=\\frac{1}{8}(2a-b)bh^2$|\n",
     "|$\\bar{z}_C=\\frac{2}{3}h$      |$I_{yz}=\\frac{1}{72}abh^2$        |$I_{\\overline{\\overline{zz}}}=\\frac{1}{12}bh^3$     |\n",
     "\n",
-    "```{figure} Images/Trapezoid shape.jpg\n",
+    "```{figure} Images/Trapezoid_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -77,7 +77,7 @@
     "|$\\bar{y}_C=\\frac{1}{3}\\frac{a+2b}{a+b}h$ |                                               |$I_{\\overline{\\overline{zz}}}=\\frac{1}{12}(a+3b)h^3$|\n",
     "|$\\bar{z}_C=\\frac{2}{3}h$                 |                                               |                                                    |\n",
     "\n",
-    "```{figure} Images/Circle shape.jpg\n",
+    "```{figure} Images/Circle_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -90,7 +90,7 @@
     "|                        |$I_{yz}=0$                    |$I_{\\overline{\\overline{yz}}}=πR^4$                  |\n",
     "|                        |$I_p=\\frac{1}{2}πR^4$         |                                                     |\n",
     "\n",
-    "```{figure} Image/Thick walled ring shape.jpg\n",
+    "```{figure} Image/Thick_Walled_Ring_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -103,7 +103,7 @@
     "|                        |$I_{yz}=0$                               |                 |\n",
     "|                        |$I_p=\\frac{1}{2}π(R_0^4-R_i^4)$          |                 |\n",
     "\n",
-    "```{figure} Images/Thin walled ring shape.jpg\n",
+    "```{figure} Images/Thin_Walled_Ring_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -116,7 +116,7 @@
     "|                        |$I_{yz}=0$                    |                                            |\n",
     "|                        |$I_p=\\frac{1}{2}πR^3t$        |                                            |\n",
     "\n",
-    "```{figure} Images/Half circle shape.jpg\n",
+    "```{figure} Images/Half_Circle_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -129,7 +129,7 @@
     "|$\\bar{y}_C=0$             |$I_{zz}=(\\frac{π}{8}-\\frac{8}{9π})R^4$|$I_{\\overline{\\overline{yz}}}=0$                     |\n",
     "|$\\bar{z}_C=\\frac{4}{3π}R$ |$I_{yz}=0$                            |                                                     |\n",
     "\n",
-    "```{figure} Images/Half thin walled ring shape.jpg\n",
+    "```{figure} Images/Half_Thin_Walled_Ring_Shape.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
@@ -149,25 +149,25 @@
    "source": [
     "## Centre of gravity for moment diagrams\n",
     "\n",
-    "```{figure} Images/Centre of gravity 1.jpg\n",
+    "```{figure} Images/Centre_Of_Gravity1.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
     "```\n",
     "\n",
-    "```{figure} Images/Centre of gravity 2.jpg\n",
+    "```{figure} Images/Centre_Of_Gravity2.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
     "```\n",
     "\n",
-    "```{figure} Images/Centre of gravity 3.jpg\n",
+    "```{figure} Images/Centre_Of_Gravity3.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
     "```\n",
     "\n",
-    "```{figure} Images/Centre of gravity 4.jpg\n",
+    "```{figure} Images/Centre_Of_Gravity4.jpg\n",
     "---\n",
     "scale: 100%\n",
     "---\n",
